chore(): ensure proper alignment of field hint by adjusting its position to the end of the label text

--- a/packages/components/src/components/bal-field/bal-field.sass
+++ b/packages/components/src/components/bal-field/bal-field.sass
@@ -6,7 +6,7 @@
   font-family: var(--bal-font-family-text)
 
 +block(field-label)
-  display: inline-block
+  display: inline
   margin-bottom: .25rem
 
 +block(field-hint)
